--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="Green2">#DAFFE9</color>
     <color name="Green3">#EEF3F9</color>
     <color name="L_Blue">#00639A</color>
+    <color name="bgBlue">#edf1f6</color>
 </resources>
